==> zhengwang721/ASF/avr32/drivers/ast/ast.c <==
#include "compiler.h"
#include "ast.h"

static bool ast_is_busy(volatile avr32_ast_t *ast)
{
	return (ast->sr & AVR32_AST_SR_BUSY_MASK) != 0;
}

static bool ast_is_clkbusy(volatile avr32_ast_t *ast)
{
	return (ast->sr & AVR32_AST_SR_CLKBUSY_MASK) != 0;
}

void ast_enable(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Enable the AST */
	ast->cr |= AVR32_AST_CR_EN_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Disable the AST */
	ast->cr &= ~(AVR32_AST_CR_EN_MASK);

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

bool ast_init_calendar(volatile avr32_ast_t *ast, uint8_t osc_type,
		uint8_t psel, ast_calendar_t ast_calendar)
{
	uint32_t time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	ast->clock = osc_type << AVR32_AST_CLOCK_CSSEL_OFFSET;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	ast->clock |= AVR32_AST_CLOCK_CEN_MASK;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}
	/* Set the new AST configuration */
	ast->cr = AST_MODE_CALENDAR << AVR32_AST_CR_CAL_OFFSET |
			psel << AVR32_AST_CR_PSEL_OFFSET;

	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Set the calendar */
	ast_set_calendar_value(ast, ast_calendar);

	return true;
}

bool ast_init_counter(volatile avr32_ast_t *ast, uint8_t osc_type,
		uint8_t psel, uint32_t ast_counter)
{
	uint32_t time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}
	
	ast->clock = osc_type << AVR32_AST_CLOCK_CSSEL_OFFSET;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	ast->clock |= AVR32_AST_CLOCK_CEN_MASK;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	/* Set the new AST configuration */
	ast->cr = (AST_MODE_COUNTER << AVR32_AST_CR_CAL_OFFSET) |
			(psel << AVR32_AST_CR_PSEL_OFFSET);

	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Set the calendar */
	ast_set_counter_value(ast, ast_counter);

	return true;
}

void ast_init_digital_tuner(volatile avr32_ast_t *ast, bool add,
		uint8_t value, uint8_t exp)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	ast->dtr = (((add << AVR32_AST_DTR_ADD_OFFSET) & AVR32_AST_DTR_ADD_MASK)
			| ((value <<
			AVR32_AST_DTR_VALUE_OFFSET) & AVR32_AST_DTR_VALUE_MASK)
			| ((exp <<
			AVR32_AST_DTR_EXP_OFFSET) & AVR32_AST_DTR_EXP_MASK));

	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_digital_tuner(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	ast->dtr &= ~(AVR32_AST_DTR_VALUE_MASK);

	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
}

bool ast_change_clk_source(volatile avr32_ast_t *ast, uint8_t osc_type,
		uint8_t psel)
{
	uint32_t time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	/* Disable the clock */
	ast->clock &= ~(AVR32_AST_CLOCK_CEN_MASK);
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	/* Change the clock source */
	ast->clock = osc_type << AVR32_AST_CLOCK_CSSEL_OFFSET;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	/* Enable the clock again */
	ast->clock |= AVR32_AST_CLOCK_CEN_MASK;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return false;
		}
	}

	/* Set the new prescalar value */
	ast->cr = psel << AVR32_AST_CR_PSEL_OFFSET;
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	return true;
}

void ast_enable_alarm0(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Enable the AST alarm0 peripheral event */
	ast->eve |= AVR32_AST_EVE_ALARM0_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_alarm0(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Disable the AST alarm0 peripheral event */
	ast->evd |= AVR32_AST_EVE_ALARM0_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_enable_alarm1(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Enable the AST alarm1 peripheral event */
	ast->eve |= AVR32_AST_EVE_ALARM1_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_alarm1(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Disable the AST alarm1 peripheral event */
	ast->evd |= AVR32_AST_EVE_ALARM1_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_set_periodic0_value(volatile avr32_ast_t *ast, avr32_ast_pir0_t pir)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Set the periodic prescaler value */
	ast->PIR0 = pir;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_set_periodic1_value(volatile avr32_ast_t *ast, avr32_ast_pir1_t pir)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Set the periodic prescaler value */
	ast->PIR1 = pir;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_enable_periodic0(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Enable the AST periodic0 peripheral event */
	ast->eve |= AVR32_AST_EVE_PER0_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_periodic0(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Disable the AST periodic0 peripheral event */
	ast->evd |= AVR32_AST_EVE_PER0_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_enable_periodic1(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Enable the periodic1 peripheral event */
	ast->eve |= AVR32_AST_EVE_PER1_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_periodic1(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Disable the AST periodic1 peripheral event */
	ast->evd |= AVR32_AST_EVE_PER0_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_clear_alarm_status_flag(volatile avr32_ast_t *ast,
		uint32_t alarm_channel)
{
	if (alarm_channel) {
		/* Clear the AST alarm status flag */
		ast_clear_status_flag(ast, AVR32_AST_SCR_ALARM1_MASK);
	} else {
		/* Clear the AST alarm status flag */
		ast_clear_status_flag(ast, AVR32_AST_SCR_ALARM0_MASK);
	}
}

void ast_clear_periodic_status_flag(volatile avr32_ast_t *ast,
		uint32_t periodic_channel)
{
	if (periodic_channel) {
		/* Clear the AST periodic event status flag */
		ast_clear_status_flag(ast, AVR32_AST_SCR_PER1_MASK);
	} else {
		/* Clear the AST periodic event status flag */
		ast_clear_status_flag(ast, AVR32_AST_SCR_PER0_MASK);
	}
}

void ast_enable_alarm_interrupt(volatile avr32_ast_t *ast,
		uint8_t alarm_channel)
{
	/* Enable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_enable_interrupt(ast, AVR32_AST_IER_ALARM1_MASK);
	} else {
		ast_enable_interrupt(ast, AVR32_AST_IER_ALARM0_MASK);
	}
}

void ast_enable_periodic_interrupt(volatile avr32_ast_t *ast,
		uint8_t periodic_channel)
{
	/* Enable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_enable_interrupt(ast, AVR32_AST_IER_PER1_MASK);
	} else {
		ast_enable_interrupt(ast, AVR32_AST_IER_PER0_MASK);
	}
}

void ast_disable_alarm_interrupt(volatile avr32_ast_t *ast,
		uint8_t alarm_channel)
{
	/* Disable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_disable_interrupt(ast, AVR32_AST_IER_ALARM1_MASK);
	} else {
		ast_disable_interrupt(ast, AVR32_AST_IER_ALARM0_MASK);
	}
}

void ast_disable_periodic_interrupt(volatile avr32_ast_t *ast,
		uint8_t periodic_channel)
{
	/* Disable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_disable_interrupt(ast, AVR32_AST_IER_PER1_MASK);
	} else {
		ast_disable_interrupt(ast, AVR32_AST_IER_PER0_MASK);
	}
}

void ast_enable_alarm_async_wakeup(volatile avr32_ast_t *ast,
		uint8_t alarm_channel)
{
	/* Enable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_enable_async_wakeup(ast, AVR32_AST_WER_ALARM1_MASK);
	} else {
		ast_enable_async_wakeup(ast, AVR32_AST_WER_ALARM0_MASK);
	}
}

void ast_enable_periodic_async_wakeup(volatile avr32_ast_t *ast,
		uint8_t periodic_channel)
{
	/* Enable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_enable_async_wakeup(ast, AVR32_AST_WER_PER1_MASK);
	} else {
		ast_enable_async_wakeup(ast, AVR32_AST_WER_PER0_MASK);
	}
}

void ast_disable_alarm_async_wakeup(volatile avr32_ast_t *ast,
		uint8_t alarm_channel)
{
	/* Disable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_disable_async_wakeup(ast, AVR32_AST_WER_ALARM1_MASK);
	} else {
		ast_disable_async_wakeup(ast, AVR32_AST_WER_ALARM0_MASK);
	}
}

void ast_disable_periodic_async_wakeup(volatile avr32_ast_t *ast,
		uint8_t periodic_channel)
{
	/* Disable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_disable_async_wakeup(ast, AVR32_AST_WER_PER1_MASK);
	} else {
		ast_disable_async_wakeup(ast, AVR32_AST_WER_PER0_MASK);
	}
}

void ast_enable_counter_clear_on_alarm(volatile avr32_ast_t *ast,
		uint8_t alarm_channel)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Enable Clear Counter on Alarm */
	ast->cr
		|= (alarm_channel ?
			AVR32_AST_CR_CA1_MASK : AVR32_AST_CR_CA0_MASK);

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_clear_prescalar(volatile avr32_ast_t *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Clear Counter on Alarm */
	ast->cr |= AVR32_AST_CR_PCLR_MASK;

	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}
