==> zhengwang721/ASF/sam/applications/sam4l_qtouch_demo/src/ast.c <==
#include "compiler.h"
#include "sysclk.h"
#include "ast.h"

static bool ast_is_busy(volatile Ast *ast)
{
	return (ast->AST_SR & AST_SR_BUSY) != 0;
}

static bool ast_is_clkbusy(volatile Ast *ast)
{
	return (ast->AST_SR & AST_SR_CLKBUSY) != 0;
}

void ast_enable(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Enable the AST */
	ast->AST_CR |= AST_CR_EN;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Disable the AST */
	ast->AST_CR &= ~(AST_CR_EN);
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

int ast_init_calendar(volatile Ast *ast, uint8_t osc_type,
		uint8_t psel, ast_calendar_t ast_calendar)
{
	uint32_t time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	ast->AST_CLOCK = AST_CLOCK_CSSEL(osc_type);
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	ast->AST_CLOCK |= AST_CLOCK_CEN;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	/* Set the new AST configuration */
	ast->AST_CR = AST_CR_CAL | AST_CR_PSEL(psel);

	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Set the calendar */
	ast_set_calendar_value(ast, ast_calendar);

	return 1;
}

int ast_init_counter(volatile Ast *ast, uint8_t osc_type,
		uint8_t psel, uint32_t ast_counter)
{
	// Enable the Ast clock mask
	sysclk_enable_peripheral_clock(AST);

	uint32_t time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	ast->AST_CLOCK = AST_CLOCK_CSSEL(osc_type);
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	ast->AST_CLOCK |= AST_CLOCK_CEN;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}

	/* Initialize the Wake Enable Register */
	while (ast_is_busy(ast));	
	ast->AST_WER = 0;

	/* Set the new AST configuration */
	while (ast_is_busy(ast));
	ast->AST_CR = AST_CR_PSEL(psel);

	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}

	/* Set the calendar */
	ast_set_counter_value(ast, ast_counter);

	return 1;
}

void ast_init_digital_tuner(volatile Ast *ast, bool add,
		uint8_t value, uint8_t exp)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	ast->AST_DTR = (add ? AST_DTR_ADD : 0)
			| AST_DTR_VALUE(value)
			| AST_DTR_EXP(exp);
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_digital_tuner(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	ast->AST_DTR &= ~(AST_DTR_VALUE_Msk);
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
}

int ast_change_clk_source(volatile Ast *ast, uint8_t osc_type,
		uint8_t psel)
{
	uint32_t time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	/* Disable the clock */
	ast->AST_CLOCK &= ~(AST_CLOCK_CEN);
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	/* Change the clock source */
	ast->AST_CLOCK = AST_CLOCK_CSSEL(osc_type);
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	/* Enable the clock again */
	ast->AST_CLOCK |= AST_CLOCK_CEN;
	time_out = AST_POLL_TIMEOUT;
	while (ast_is_clkbusy(ast)) {
		if (--time_out == 0) {
			return 0;
		}
	}
	/* Set the new prescalar value */
	ast->AST_CR = AST_CR_PSEL(psel);
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	return 1;
}

void ast_enable_alarm0(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Enable the AST alarm0 peripheral event */
	ast->AST_EVE = AST_EVE_ALARM0;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_alarm0(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Disable the AST alarm0 peripheral event */
	ast->AST_EVD = AST_EVD_ALARM0;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_enable_alarm1(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Enable the AST alarm1 peripheral event */
	ast->AST_EVE = AST_EVE_ALARM1;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_alarm1(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Disable the AST alarm1 peripheral event */
	ast->AST_EVD = AST_EVD_ALARM1;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_set_periodic0_value(volatile Ast *ast, uint32_t pir0_mask)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Set the periodic prescaler value */
	ast->AST_PIR0 = pir0_mask;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_set_periodic1_value(volatile Ast *ast, uint32_t pir1_mask)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Set the periodic prescaler value */
	ast->AST_PIR1 = pir1_mask;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_enable_periodic0(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Enable the AST periodic0 peripheral event */
	ast->AST_EVE = AST_EVE_PER0;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_periodic0(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Disable the AST periodic0 peripheral event */
	ast->AST_EVD = AST_EVD_PER0;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_enable_periodic1(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Enable the periodic1 peripheral event */
	ast->AST_EVE = AST_EVE_PER1;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_disable_periodic1(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Disable the AST periodic1 peripheral event */
	ast->AST_EVD = AST_EVD_PER1;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_clear_alarm_status_flag(volatile Ast *ast,
		uint32_t alarm_channel)
{
	if (alarm_channel) {
		/* Clear the AST alarm status flag */
		ast_clear_status_flag(ast, AST_SCR_ALARM1);
	} else {
		/* Clear the AST alarm status flag */
		ast_clear_status_flag(ast, AST_SCR_ALARM0);
	}
}

void ast_clear_periodic_status_flag(volatile Ast *ast,
		uint32_t periodic_channel)
{
	if (periodic_channel) {
		/* Clear the AST periodic event status flag */
		ast_clear_status_flag(ast, AST_SCR_PER1);
	} else {
		/* Clear the AST periodic event status flag */
		ast_clear_status_flag(ast, AST_SCR_PER0);
	}
}

void ast_enable_alarm_interrupt(volatile Ast *ast,
		uint8_t alarm_channel)
{
	/* Enable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_enable_interrupt(ast, AST_IER_ALARM1);
	} else {
		ast_enable_interrupt(ast, AST_IER_ALARM0);
	}
}

void ast_enable_periodic_interrupt(volatile Ast *ast,
		uint8_t periodic_channel)
{
	/* Enable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_enable_interrupt(ast, AST_IER_PER1);
	} else {
		ast_enable_interrupt(ast, AST_IER_PER0);
	}
}

void ast_disable_alarm_interrupt(volatile Ast *ast,
		uint8_t alarm_channel)
{
	/* Disable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_disable_interrupt(ast, AST_IER_ALARM1);
	} else {
		ast_disable_interrupt(ast, AST_IER_ALARM0);
	}
}

void ast_disable_periodic_interrupt(volatile Ast *ast,
		uint8_t periodic_channel)
{
	/* Disable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_disable_interrupt(ast, AST_IER_PER1);
	} else {
		ast_disable_interrupt(ast, AST_IER_PER0);
	}
}

void ast_enable_alarm_async_wakeup(volatile Ast *ast,
		uint8_t alarm_channel)
{
	/* Enable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_enable_async_wakeup(ast, AST_WER_ALARM1);
	} else {
		ast_enable_async_wakeup(ast, AST_WER_ALARM0);
	}
}

void ast_enable_periodic_async_wakeup(volatile Ast *ast,
		uint8_t periodic_channel)
{
	/* Enable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_enable_async_wakeup(ast, AST_WER_PER1);
	} else {
		ast_enable_async_wakeup(ast, AST_WER_PER0);
	}
}

void ast_disable_alarm_async_wakeup(volatile Ast *ast,
		uint8_t alarm_channel)
{
	/* Disable the AST Alarm Asynchronous Wake-up */
	if (alarm_channel) {
		ast_disable_async_wakeup(ast, AST_WER_ALARM1);
	} else {
		ast_disable_async_wakeup(ast, AST_WER_ALARM0);
	}
}

void ast_disable_periodic_async_wakeup(volatile Ast *ast,
		uint8_t periodic_channel)
{
	/* Disable the AST Periodic Asynchronous Wake-up */
	if (periodic_channel) {
		ast_disable_async_wakeup(ast, AST_WER_PER1);
	} else {
		ast_disable_async_wakeup(ast, AST_WER_PER0);
	}
}

void ast_enable_counter_clear_on_alarm(volatile Ast *ast,
		uint8_t alarm_channel)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Enable Clear Counter on Alarm */
	ast->AST_CR |= (alarm_channel ? AST_CR_CA1 : AST_CR_CA0);
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}

void ast_clear_prescalar(volatile Ast *ast)
{
	/* Wait until the ast CTRL register is up-to-date */
	while (ast_is_busy(ast)) {
	}
	/* Clear Counter on Alarm */
	ast->AST_CR |= AST_CR_PCLR;
	/* Wait until write is done */
	while (ast_is_busy(ast)) {
	}
}
